--- a/html.prac/test1.html
+++ b/html.prac/test1.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1 style="background-color: powderblue; font-family:verdana;">Heading1</h1>
+    <p style="background-color: tomato; font-family:courier;">This is some text</p>
+    <hr>
+    <h2 style="font-size: 300%;">This is heading2</h2>
+    <p style="font-size: 160%;">This is another text</p>
+    <hr>
+    <h1 style="text-align: center;">Centered Heading</h1>
+    <p style="text-align: center;">This is<br>a Centered paragraph<br>with line breaks</p>
+
+    <pre>
+    My Bonnie lies over the ocean.
+    My Bonnie lies over the sea.
+    My Bonnie lies over the ocean.
+    Oh, bring back my Bonnie to me.
+    </pre>
+
 </body>
+
 </html>
